# aioaria2-mirror-bot

./: .gitignore  .restyled.yaml  Dockerfile  README.md  bot  config.env_sample  main.py  mypy.ini  pyproject.toml
.github/workflows/: container.yml
Bot/: command.py  conversation.py
Bot/core/: bot.py  conversation_dispatcher.py
Bot/modules/: debug.py  gdrive.py
Bot/util/: async_helpers.py  version.py
bot/: __init__.py  __main__.py  command.py  conversation.py  error.py  launch.py  listener.py  log.py  main.py  plugin.py
bot/core/: base.py  bot.py  bot_mixin_base.py  command_dispatcher.py  conversation_dispatcher.py  database.py  database_provider.py  event_dispatcher.py  plugin_extenter.py  telegram_bot.py
bot/modules/: aria2.py  core.py  debug.py  gdrive.py  misc.py
bot/plugins/: __init__.py  aria2.py  core.py  debug.py  gdrive.py  mega.py  misc.py
bot/util/: __init__.py  aria2.py  config.py  crypto.py  db.py  file.py  misc.py  system.py  tg.py  time.py
caligo/: __init__.py  custom_filter.py  listener.py  module.py
caligo/core/: command_dispatcher.py  module_extender.py  telegram_bot.py
caligo/modules/: aria2.py  core.py  debug.py  gdrive.py  heroku.py  misc.py  moderation.py  stats.py  sticker.py  system.py  text.py
caligo/util/: __init__.py  config.py  error.py  git.py
